tests/fixtures/invalid/round_str_float.py
# Cannot call round() with Str, Float
x = round("hello", 1.0)
